Fixing the content overflow

--- a/default.css
+++ b/default.css
@@ -337,7 +337,10 @@ h6{font-size: 16px;}
 }
 
 .certificates{
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(480px, 1fr));
+  padding-bottom: 50px;
+  padding-top: 50px;
   }
 
   /*Work Experience*/
